--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,8 @@
     width: 100%;
     min-height:100vh;
 
+    background-image: url('../src/assets/galaxy1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     
 }
