--- a/src/components/searchBar/searchBar.css
+++ b/src/components/searchBar/searchBar.css
@@ -2,7 +2,24 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    
 }
-/* .searchbar input {
+.searchbar form label{
+    font-size: 1.2rem;
+}
+
+.searchbar input {
     margin-left: 10px;
-} */
+    width: 12rem;
+}
+
+.search-btn{
+    cursor: pointer;
+    background: transparent;
+    filter: invert(90%);
+    border: none;
+    width: 1.563rem;
+}
+.search-btn img{
+    width: 100%;
+}
