--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+@font-face {
+  font-family: minecraft;
+  src: url(../src/assets/MinecraftRegular.otf);
+}
+
 body {
-  font-family: Silkscreen, sans-serif;
+  font-family: Silkscreen;
   font-size: 1.1em;
   background-color: #2D2727;
+  
 }
 
 *{
@@ -27,15 +33,36 @@ body {
 }
 
 input, textarea {
-    color: #333;
+    color: var(--text-color);
     padding: 8px;
     font-size: 1em;
-    border-radius: 4px;
-    border: 1px solid #d4d4d4;
-    background-color: #fff;
+    font-family: minecraft;
     display: block;
     width: 100%;
     box-sizing: border-box;
+    background: rgba(17, 25, 45, 0.48);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(12.5px);
+    -webkit-backdrop-filter: blur(12.5px);
+    border: 1px solid rgba(17, 25, 45, 0.48);
+  }
+
+  .error {
+    color: red;
+    background: pink;
+    border: 1px solid red;
+    border-radius: 4px;
+    padding: 8px;
+    margin: 10px 0;
+  }
+  .success{
+    color: green;
+    background: lightgreen;
+    border: 1px solid green;
+    border-radius: 4px;
+    padding: 8px;
+    margin: 10px 0;
   }
 
   .btn {
@@ -55,95 +82,4 @@ input, textarea {
 
 
 
-  /* button  */
-  .button {
-    min-width: 6.5rem;
-    font-family: Silkscreen, sans-serif;
-    position: relative;
-    border: none;
-    background: transparent;
-    padding: 0;
-    cursor: pointer;
-    outline-offset: 4px;
-    transition: filter 250ms;
-    user-select: none;
-    touch-action: manipulation;
-   }
-   
-   .shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    background: hsl(0deg 0% 0% / 0.25);
-    will-change: transform;
-    transform: translateY(2px);
-    transition: transform
-       600ms
-       cubic-bezier(.3, .7, .4, 1);
-   }
-   
-   .edge {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    background: linear-gradient(
-      to left,
-      #6554AF 0%,
-      #8E7BCF 8%,
-      #8E7BCF 92%,
-      #6554AF 100%
-);
-   }
-   
-   .front {
-    display: block;
-    position: relative;
-    padding: .6rem .5rem;
-    border-radius: 8px;
-    font-size: 1rem;
-    color: white;
-    background: var(--primary-color);
-    will-change: transform;
-    transform: translateY(-4px);
-    transition: transform
-       600ms
-       cubic-bezier(.3, .7, .4, 1);
-   }
-   
-   .button:hover {
-    filter: brightness(110%);
-   }
-   
-   .button:hover .front {
-    transform: translateY(-6px);
-    transition: transform
-       250ms
-       cubic-bezier(.3, .7, .4, 1.5);
-   }
-   
-   .button:active .front {
-    transform: translateY(-2px);
-    transition: transform 34ms;
-   }
-   
-   .button:hover .shadow {
-    transform: translateY(4px);
-    transition: transform
-       250ms
-       cubic-bezier(.3, .7, .4, 1.5);
-   }
-   
-   .button:active .shadow {
-    transform: translateY(1px);
-    transition: transform 34ms;
-   }
-   
-   .button:focus:not(:focus-visible) {
-    outline: none;
-   }
+ 
