--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,9 +3,9 @@
     max-width: 100%;
     height: 90vh;
 
-    background-image: url('../../assets/galaxy1.jpg');
+    /* background-image: url('../../assets/galaxy1.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 
     display: flex;
     align-items: center;
