--- a/src/components/DevCard/devCard.css
+++ b/src/components/DevCard/devCard.css
@@ -5,7 +5,7 @@
     height: 100%;
     /* min-height: 250px; */
 
-    max-height: 300px;
+    max-height: 200px;
     color: #fff;
     transition: 0.5s;
     cursor: pointer;
@@ -63,10 +63,12 @@
 .devcard__content{
     width: 90%;
     height: 90%;
+    /* max-height: 100%; */
     margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 1rem;
 }
 
 .devcard__title{
@@ -91,12 +93,15 @@
 .devcard__img-container{
     display: flex;
     align-items: flex-end;
+    width: 30%;
 }
 
 .devcard__img{
     width: 100%;
 
-    max-width: 100px;
+    /* max-width: 100px; */
+    /* width: auto; */
+    /* max-height: 100px; */
 
     border-radius: 20%;
     overflow: hidden;
