--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,23 +1,16 @@
 .header__container{
     width: 100%;
     max-width: 100%;
-    height: 90vh;
-
-    /* background-image: url('../../assets/galaxy1.jpg');
-    background-size: cover;
-    background-repeat: no-repeat; */
-
+    min-height: 90vh;
     display: flex;
     align-items: center;
     gap: 1rem;
-
     padding: 0 0 0 3rem;
 }
 .header-content__container{
     width: 55%;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    align-items: center; */
 }
 .header__title{
     width: 60%;
