--- a/src/components/DevCard/devCard.css
+++ b/src/components/DevCard/devCard.css
@@ -3,8 +3,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    /* min-height: 250px; */
-
     max-height: 200px;
     color: #fff;
     transition: 0.5s;
@@ -88,6 +86,7 @@
     font-size: 1.1rem;
     font-family: minecraft;
     max-width: 65%;
+    word-wrap: break-word;
 }
 
 .devcard__img-container{
