fixed the burguer menu so that it closes when a button is clicked

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ input, textarea {
   .header__text {
     padding-left: 0.5rem;
   }
-  .header__text p{
+  .header__text p, span{
     font-size: 0.8em;
   }
 }
